can decode locally
