# api/oas-doc.yaml
@@ -2,27 +2,30 @@ openapi: 3.0.0
 info:
   version: 1.0.0
   title: TPX LE proxy
-  description: Interface proxy between ThingPark X Location Engine and different types of LoRaWAN Network Servers
+  description: >
+    This is an interface proxy between ThingPark X Location Engine and different types of LoRaWAN Network Servers.<br />
+    An example application server utilising this API is available <a href='https://nano-things.net/tpxle-proxy/app' target='_blank'>here</a>.<br />
+    The source code of this API is published on Github <a href='https://github.com/norbertherbert/tpxle-proxy' target='_blank'>here</a>.
 servers:
   - url: 'https://nano-things.net/tpxle-proxy/latest/api'
     description: Demo server
   - url: 'http://localhost:8086/tpxle-proxy/latest/api'
     description: Local test server
 tags:
-  - name: Application Server
-    description: Interface endpoints for Application Server
-  - name: Network Servers
-    description: Interface endpoints for Network Servers
+  - name: From Location Solver
+    description: Interface endpoints that receive messages from the Location Solver
+  - name: From Network Servers
+    description: Interface endpoints that receive messages from Network Servers
 
 paths:
 
-  /app_server:
+  /uplink_location_solver:
     post:
       tags:
-        - Application Server
+        - From Location Solver
       summary: Receive resolved location from ThingPark Location Solver
       description: This endpoint receives resolved location from ThingPark Location Solver and saves it in the servers DB.
-      x-swagger-router-controller: appServer
+      x-swagger-router-controller: fromLocationSolver
       operationId: saveResolvedLocation
       requestBody:
         description: The message body sent by the ThingPark Location Solver.
@@ -59,12 +62,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/MessageResponse'  
       
+  /resolved_received:
     get:
       tags:
-        - Application Server
-      summary: List resolved locations recently sent by the Location Solver
-      description: This endpoint lists the latest resolved locations sent by ThingPark Location Solver.
-      x-swagger-router-controller: appServer
+        - From Location Solver
+      summary: List resolved locations received from Location Solver.
+      description: This endpoint lists resolved locations recently received from ThingPark Location Solver.
+      x-swagger-router-controller: fromLocationSolver
       operationId: listResolvedLocations
       parameters:
         - name: deviceEUI
@@ -104,10 +108,10 @@ paths:
   /uplink_actility:
     post:
       tags:
-        - Network Servers
+        - From Network Servers
       summary: Receive uplinlk message from Actility Network Server
       description: This endpoint receives an uplink message from Actility Network Server, transforms it to the right format and forwards it to ThingPark Location Solver.
-      x-swagger-router-controller: proxyNsLs
+      x-swagger-router-controller: fromNetworkServer
       operationId: uplinkActility
       parameters:
         - name: AS_ID
@@ -135,6 +139,7 @@ paths:
           description: ISO 8601 timestamp associated to the generation of the HTTP request by the LRC (only reported when the authentication is activated). Time is not reported when the Uplink/downlink authentication is not activated in the AS profile.
           schema:
             type: string
+            format: date-time
         - name: Token
           in: query
           description: Security token generated by the LRC (only reported when the authentication is activated). Token is not reported when the Uplink/downlink authentication is not activated in the AS profile.
@@ -180,10 +185,10 @@ paths:
   /uplink_ttn:
     post:
       tags:
-        - Network Servers
+        - From Network Servers
       summary: Receive uplinlk message from TTN Network Server
       description: This endpoint receives an uplink message from TTN Network Server, transforms it to the right format and forwards it to ThingPark Location Solver.
-      x-swagger-router-controller: proxyNsLs
+      x-swagger-router-controller: fromNetworkServer
       operationId: uplinkTTN
       requestBody:
         description: The message body sent by the Network Server.
@@ -222,10 +227,10 @@ paths:
   /uplink_loriot:
     post:
       tags:
-        - Network Servers
+        - From Network Servers
       summary: Receive uplinlk message from Loriot Network Server
       description: This endpoint receives an uplink message from Loriot Network Server, transforms it to the right format and forwards it to ThingPark Location Solver.
-      x-swagger-router-controller: proxyNsLs
+      x-swagger-router-controller: fromNetworkServer
       operationId: uplinkLoriot
       requestBody:
         description: The message body sent by the Network Server.
@@ -264,10 +269,10 @@ paths:
   /uplink_kerlink:
     post:
       tags:
-        - Network Servers
+        - From Network Servers
       summary: Receive uplinlk message from Kerlink Network Server
       description: This endpoint receives an uplink message from Kerlink Network Server, transforms it to the right format and forwards it to ThingPark Location Solver.
-      x-swagger-router-controller: proxyNsLs
+      x-swagger-router-controller: fromNetworkServer
       operationId: uplinkKerlink
       requestBody:
         description: The message body sent by the Network Server.
@@ -304,6 +309,49 @@ paths:
               schema:
                 $ref: '#/components/schemas/MessageResponse'
 
+  /received_decoded:
+    get:
+      tags:
+        - From Network Servers
+      summary: List messages recently received from Network Servers.
+      description: This endpoint lists locally decoded messages recently received from Network Servers.
+      x-swagger-router-controller: fromNetworkServer
+      operationId: listDecodedMessages
+      parameters:
+        - name: devEUI
+          description: Use this parameter to filter out one device with a specific DevEUI.
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: \[200 OK\] The list has been retreived
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/AsDecodedMessage"
+        '400':
+          description: \[400 Bad Request\] Invalid parameters supplied.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        '403':
+          description: \[403 Forbidden\] Authentication error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        '500':
+          description: \[500 Internal Server Error\] The server encountered an unexpected
+            condition which prevented it from fulfilling the request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'  
+
 components:
 
   schemas:
@@ -321,7 +369,8 @@ components:
           type: string 
           example: 20635F00C50000AF
         time:
-          type: string 
+          type: string
+          format: date-time
           example: '2019-04-03T08:11:15.335000+00:00'
         coordinates:
           type: array
@@ -414,6 +463,7 @@ components:
         time: 
           description: Time associated with the device position (e.g. time of arrival to the base station), in ISO 8601 format.
           type: string
+          format: date-time
         coordinates:
           description: Device coordinates, to be used 'as is' in the platform. Expected value is an array of coordinates as per the GeoJSON specification, i.e. [longitude, latitude, altitude].
           type: array
@@ -439,6 +489,7 @@ components:
             receptionTime: 
               description: Time associated with the reception of the device uplink, in ISO 8601 format.
               type: string
+              format: date-time
             SF: 
               description: Spreading factor value of the device.
               type: integer
@@ -749,6 +800,7 @@ components:
             Time: 
               description: LRR Timestamp for the packet.
               type: string
+              format: date-time
               example: '2018-07-09T16:06:38.49+02:00'
             TxPower: 
               description: The transmission power of the device (in dBm), computed by the LRC based on ADR algorithm and validated by the device through a LinkADRAns. If no LinkADRAns have been yet validated by the device, the device boot parameter is used instead.
@@ -810,6 +862,7 @@ components:
             time:
               description: Time when the server received the message
               type: string
+              format: date-time
               example: '1970-01-01T00:00:00Z'
             frequency:
               description: Frequency at which the message was sent
@@ -847,6 +900,7 @@ components:
                   time: 
                     description: Time when the gateway received the message - left out when gateway does not have synchronized time
                     type: string
+                    format: date-time
                     example: '1970-01-01T00:00:00Z'
                   channel: 
                     description: Channel where the gateway received the message
@@ -1034,6 +1088,21 @@ components:
               radioId: 
                 type: integer 
                 example: 1
+
+    AsDecodedMessage:
+      type: object
+      properties:
+        devEUI:
+          type: string
+        fPort:
+          type: integer
+        time:
+          type: string
+          format: date-time
+        payloadHex:
+          type: string
+        payloadDecoded:
+          type: object
 
     MessageResponse:
       type: object
